<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_chip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_green"
            android:text="@string/response_uid"/>

        <TextView
            android:id="@+id/txt_command"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/response_command"/>

        <TextView
            android:id="@+id/txt_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_green"
            android:text="@string/response_result"/>

    </LinearLayout>

</LinearLayout>