<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".features.nfc.MainActivity"
    android:gravity="center"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/main_data"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_command"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="25dp"
            android:hint="@string/main_input_command"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_command"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:text="@string/main_send_command"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:background="@drawable/button_shape"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:weightSum="2"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_logs"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/main_log"
                android:textSize="20sp"
                android:gravity="center|left"/>

            <Button
                android:id="@+id/btn_clear"
                android:text="@string/main_clear"
                android:textAllCaps="false"
                android:textColor="@color/danamon"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:textSize="12sp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@drawable/button_shape_stroke"/>

            <Button
                android:id="@+id/btn_delete"
                android:text="@string/main_delete"
                android:textAllCaps="false"
                android:textColor="@color/danamon"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:textSize="12sp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:background="@drawable/button_shape_stroke"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            app:cardCornerRadius="10dp"
            android:background="@color/white">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/command_response_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="10dp"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/txt_uid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/txt_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="5"
                        android:layout_margin="20dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:visibility="gone"/>

                </LinearLayout>

            </ScrollView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>